Fix word wrap.

--- a/frontend/assets/css/chat.scss
+++ b/frontend/assets/css/chat.scss
@@ -225,6 +225,8 @@ $primary-color: #ffc211;
   display: flex;
   align-items: flex-start;
   padding: 10px;
+  word-wrap: break-word;
+  word-break: break-word;
 }
 
 .message-list-item-body {
